--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-zone (0.15+helium0+focal0+rev20200424214248) unstable; urgency=low
+
+  * New branch.
+
+ -- Masakazu Asama <m-asama@ginzado.co.jp>  Fri,  7 Feb 2020 20:59:26 +0900
+
 vyatta-zone (0.15+vyos1+helium2) unstable; urgency=low
 
   * Update maintainer address.
